--- a/style.css
+++ b/style.css
@@ -121,10 +121,11 @@ p`{
     END Glitch hello-app default styles
     ******************************************************************************/
     
-    body {
-      font-family: HK Grotesk;
-      background-color: var(--color-bg);
-    }
+  
+body {
+    font-family: HK Grotesk;
+    background-color: #ffffff00;
+}
     
     /* Page structure */
     .wrapper {
